change contact name

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "Tjelvar Eriksson",
-            "email": "te@seldenmast.se"
+            "email": "tjelvare@gmail.com"
         }
     ],
     "require": {}
